<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:padding="16dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_courses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp" />

        <EditText
            android:id="@+id/text_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_courses"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_width="match_parent" />

        <EditText
            android:id="@+id/text_note_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_note_title"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textMultiLine"
            tools:layout_width="match_parent" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>